# guitar

./: .env.example  .gitignore  Dockerfile  README.md  conversation.md  docker-compose.yml  instructions.md
.devcontainer/: devcontainer.json
backend/: .gitignore  analyzer.py  chords.py  llm.py  main.py  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/assets/: main.scss
frontend/src/components/: Controls.vue  Fretboard.vue  Metronome.vue
frontend/src/composables/: useAudioAnalyzer.ts  useMetronome.ts  useToneGenerator.ts
frontend/src/router/: index.ts
frontend/src/stores/: guitar.ts  notebook.ts  teacher.ts
frontend/src/views/: AnalyzerView.vue  AskTeacherView.vue  CircleView.vue  NotebookView.vue  TunerView.vue
