[project]
name = "chord-coordinator"
version = "0.1.0"
description = "Level up your guitar skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.128.0",
    "openai>=2.14.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.9.0",
]
